パスワードの調整など

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ Partner's Key:
 </p>
 <p>
 Password:
-<input id='password' readonly type='text' value='hoge'>
+<input id='password' readonly size='50' type='text' value=''>
 <br>
 Password Digest:
-<input id='digest' readonly type='text' value='hoge'>
+<input id='digest' readonly size='50' type='text' value=''>
 <br>
 </p>
 <script>
