サンプルデータを撤去

--- a/index.html
+++ b/index.html
@@ -6,21 +6,14 @@
 <p>
 My Key:
 <br>
-<textarea cols='140' id='mykey' rows='9'></textarea>
+<textarea cols='140' id='mykey' readonly rows='9'></textarea>
 <br>
 <button id='create'>create</button>
 </p>
 <p>
 Partner's Key:
 <br>
-<textarea cols='140' id='partnerskey' rows='9'>{
-"crv": "P-521",
-"ext": true,
-"key_ops": [],
-"kty": "EC",
-"x": "ASc-3sn4eYpHJWssA2jv_gQucYOEhD-d9phopdmhUNFvteAGSxEksfRVxVLxeI121By4O2cQlgPN3A9n4Ss8wt5Q",
-"y": "AbuEcpfMtKUdEI3iD2qT--XVSAvmQry8NpXLLlBrFMr7sL9aq4CV6_ErjfGlClCUNJxxWZbjgbFQ1zVJNpJMYYrF"
-}</textarea>
+<textarea cols='140' id='partnerskey' rows='9'></textarea>
 <br>
 <button id='import'>import</button>
 </p>
