--- a/index.html
+++ b/index.html
@@ -3,27 +3,38 @@
 <meta charset='utf-8'>
 <script src='./main.js'></script>
 </head>
+<h1>鍵交換支援</h1>
+<h2>自分の鍵</h2>
 <p>
-My Key:
+この鍵をメールなどでパートナーに伝えます:
 <br>
 <textarea cols='140' id='mykey' readonly rows='9'></textarea>
 <br>
-<button id='create'>create</button>
+<button id='create'>自分の鍵を更新する</button>
 </p>
+<h2>パートナーの鍵</h2>
 <p>
-Partner's Key:
+ここに、パートナーから伝えられた鍵を貼り付けます
 <br>
 <textarea cols='140' id='partnerskey' rows='9'></textarea>
 <br>
-<button id='import'>import</button>
+<button id='import'>パスワードを生成する</button>
 </p>
+<h2>パスワード</h2>
 <p>
-Password:
-<input id='password' readonly size='50' type='text' value=''>
+このパスワードは決してインターネットなどに流してはいけません:
 <br>
-Password Digest:
+<input id='password' readonly size='50' type='text' value=''>
+</p>
+<h2>ダイジェスト</h2>
+<p>
+パスワード生成後、この文字列をメールなどでパートナーに伝えます:
+<br>
 <input id='digest' readonly size='50' type='text' value=''>
 <br>
+パートナーのダイジェストと、あなたのダイジェストが一致する場合、パスワードも同じになっています。
+<br>
+コピペミスなどがある場合、パートナーのダイジェストと、あなたのダイジェストが一致しません。
 </p>
 <script>
   main();
