パスワードを5個生成する

--- a/index.html
+++ b/index.html
@@ -22,9 +22,22 @@
 </p>
 <h2>パスワード</h2>
 <p>
-このパスワードは決してインターネットなどに流してはいけません:
+以下のパスワードは決してインターネットなどに流してはいけません:
 <br>
-<input id='password' readonly size='50' type='text' value=''>
+<label for='password0'>パスワード #0</label>
+<input id='password0' readonly size='50' type='text' value=''>
+<br>
+<label for='password1'>パスワード #1</label>
+<input id='password1' readonly size='50' type='text' value=''>
+<br>
+<label for='password2'>パスワード #2</label>
+<input id='password2' readonly size='50' type='text' value=''>
+<br>
+<label for='password3'>パスワード #3</label>
+<input id='password3' readonly size='50' type='text' value=''>
+<br>
+<label for='password4'>パスワード #4</label>
+<input id='password4' readonly size='50' type='text' value=''>
 </p>
 <h2>ダイジェスト</h2>
 <p>
