ブラウザリストを更新する

--- a/index.html
+++ b/index.html
@@ -48,14 +48,18 @@
 以下のブラウザで動作することを確認をしました:
 </p>
 <ul>
-<li>Microsoft Edge バージョン 81.0.416.64 on macOS</li>
-<li>Google Chrome バージョン 81.0.4044.122 on macOS</li>
 <li>Firefox Browser 75.0 on macOS</li>
+<li>Firefox Browser 75.0 on Windows</li>
+<li>Google Chrome バージョン 81.0.4044.122 on macOS</li>
+<li>Google Chrome バージョン 81.0.4044.122 on Windows</li>
+<li>Microsoft Edge バージョン 81.0.416.64 on macOS</li>
+<li>Microsoft Edge バージョン 81.0.416.64 on Windows</li>
 </ul>
 <p>
 以下のブラウザで動作<b>しない</b>ことを確認をしました:
 </p>
 <ul>
+<li>Internet Explorer 11 (バージョン 11.778.18362.0) on Windows</li>
 <li>Safari バージョン13.1 (15609.1.20.111.8) on macOS</li>
 </ul>
 <script>
